--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,3 +27,9 @@ nav {
         margin-left: 16px;
     }
 }
+
+.ant-layout {
+    background: #fff;
+    margin-top: 24px;
+    padding: 0 16px;
+}
