--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -33,3 +33,23 @@ nav {
     margin-top: 24px;
     padding: 0 16px;
 }
+
+.ant-tabs {
+    height: calc(640px - 66px);   
+    margin-top: -24px;
+}
+
+.ant-tabs-bottom-bar {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.ant-tabs-nav {
+    width: 100%;
+    .ant-tabs-tab {
+        text-align: center;
+        width: 50%;
+        margin: 0;
+    }
+}
