--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,28 +1,43 @@
+@import url( 'https://fonts.googleapis.com/css?family=Overpass:300,400,600&display=swap');
+
 * {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Overpass', sans-serif;
 }
 
 body {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     margin-top: 24px;
+    font-family: 'Overpass', sans-serif;
 }
 
 #wrapper {
     width: 340px;
     height: 640px;
-    border: 1px solid rgba(#000, 0.2);
+    border: 1px solid #EAEAEA;
 }
 
 nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     height: 64px;
     padding: 0 16px;
-    border-bottom: 1px solid rgba(#000, 0.2);
+    border-bottom: 1px solid #EAEAEA;
     button {
         margin-left: 16px;
     }
@@ -37,7 +52,7 @@ nav {
 }
 
 .ant-tabs {
-    height: calc(640px - 66px);  
+    height: calc(640px - 66px);
 }
 
 .ant-tabs-bottom-bar {
@@ -55,6 +70,55 @@ nav {
     }
 }
 
+.ant-input {
+    line-height: 33px;
+}
+
+.social__login {
+    width: 48%;
+    text-align: unset;
+    line-height: 32px;
+    i {
+        float: right;
+        margin-top: 7.5px;
+    }
+}
+
+#social__login__twitter {
+    border: 1px solid #1da1f2;
+    i {
+        color: #1da1f2;
+    }
+}
+
+#social__login__google {
+    border: 1px solid #dd4b39;
+    i {
+        color: #dd4b39;
+    }
+}
+
+#dashboard__header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
+    div {
+        margin-left: 24px;
+        margin-top: 4px;
+        h2 {
+            margin-bottom: 0;
+            font-size: 20px;
+            color: #1D2E47;
+            line-height: 24px;
+        }
+        span {
+            font-size: 16px;
+            line-height: 25px;
+            color: #ACB3BE;
+        }
+    }
+}
 @media screen and (max-width:567px) {
     body {
         margin-top: 0;
