--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -98,27 +98,65 @@ nav {
     }
 }
 
-#dashboard__header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    align-items: center;
-    div {
-        margin-left: 24px;
-        margin-top: 4px;
-        h2 {
-            margin-bottom: 0;
-            font-size: 20px;
-            color: #1D2E47;
-            line-height: 24px;
+#dashboard {
+    header {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        align-items: center;
+        div {
+            margin-left: 24px;
+            margin-top: 4px;
+            h2 {
+                margin-bottom: 0;
+                font-size: 20px;
+                color: #1D2E47;
+                line-height: 24px;
+            }
+            span {
+                font-size: 16px;
+                line-height: 25px;
+                color: #ACB3BE;
+            }
         }
-        span {
-            font-size: 16px;
-            line-height: 25px;
-            color: #ACB3BE;
+    }
+    main {
+        button {
+            line-height: 26px;
         }
     }
 }
+
+#edit__profile {
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 16px;
+        height: 24px;
+        h2 {
+            margin-bottom: 0;
+            line-height: 0;
+        }
+    }
+}
+
+.ant-input-affix-wrapper .ant-input-prefix {
+    left: 9px;
+}
+
+.ant-form-item {
+    margin-bottom: 10px;
+}
+
+.ant-form-item-with-help {
+    margin-bottom: 0;
+}
+
+.ant-form-item-label {
+    padding: 0 0 2px;
+}
+
 @media screen and (max-width:567px) {
     body {
         margin-top: 0;
