Modify: Edit profile page header

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -157,6 +157,10 @@ nav {
     padding: 0 0 2px;
 }
 
+.ant-page-header {
+    padding: 0;
+}
+
 @media screen and (max-width:567px) {
     body {
         margin-top: 0;
